--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,13 +22,16 @@
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Search
+          Find Contractor
         </ion-item>
         <ion-item menu-close href="#/app/browse">
-          Browse
+          Settings
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
-          Playlists
+          History
+        </ion-item>
+        <ion-item menu-close href="#/app/playlists">
+          Payment
         </ion-item>
       </ion-list>
     </ion-content>
