--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,17 +14,20 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">plzHelp.me</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
+        <ion-item menu-close href="#/app/profile">
+          Profile
+        </ion-item>
         <ion-item menu-close href="#/app/search">
           Find Contractor
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
+        <ion-item menu-close href="#/app/settings">
           Settings
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
