--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,7 +25,7 @@
           Profile
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Find Contractor
+          Search
         </ion-item>
         <ion-item menu-close href="#/app/settings">
           Settings
