--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,6 +2,6 @@
   <ion-content>
     <h1>Profile Overview</h1>
     <div>Recent Projects</div>
-    
+    <!-- ng-repeat openProjects -->
   </ion-content>
 </ion-view>
