--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,7 +21,7 @@
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
-        <ion-item menu-close href="#/app/profile">
+        <ion-item menu-close href="#/app/profile" ng-click="refreshProfile()">
           Profile
         </ion-item>
         <ion-item menu-close href="#/app/search">
