--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,16 +1,18 @@
 <ion-view view-title="Search">
   <ion-content id="search">
     <h1>Find Your Contractor</h1>
-    <div><input ng-model='jobName' placeholder='Name Your Job'></div>
-    <div><input ng-model='jobDescription' placeholder='Describe Your Job'></div>
-    <div><input ng-model='date' placeholder="Date"></div>
-    <div><input ng-model='address' placeholder="Address"></div>
-    <div><select ng-model='jobType'>
-      <option value="plumbing">Plumbing</option>
-      <option value="electrical">Electrical</option>
-      <option value="cleaning">Cleaning</option>
-      <option value="general handyman">General Handyman</option>
-    </select></div>
-    <button type="button">Submit</button>
+      <form>
+        <div><input ng-model='search.jobName' placeholder='Name Your Job'></div>
+        <div><input ng-model='search.jobDescription' placeholder='Describe Your Job'></div>
+        <div><input ng-model='search.date' placeholder="Date"></div>
+        <div><input ng-model='search.address' placeholder="Address"></div>
+        <div><select ng-model='search.jobType'>
+          <option value="plumbing">Plumbing</option>
+          <option value="electrical">Electrical</option>
+          <option value="cleaning">Cleaning</option>
+          <option value="general handyman">General Handyman</option>
+        </select></div>
+        <button ng-click='search(search.jobName, search.jobDescription, search.date, search.address, search.jobType)' type="button">Submit</button>
+      </form>
   </ion-content>
 </ion-view>
