--- a/www/templates/history.html
+++ b/www/templates/history.html
@@ -1,4 +1,6 @@
 <ion-view view-title="History">
+<ion-nav-bar class="bar-dark"> 
+</ion-nav-bar>
   <ion-content>
     <h1>History</h1>
   </ion-content>
