--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,4 +1,6 @@
 <ion-view view-title="Playlists">
+<ion-nav-bar class="bar-dark"> 
+</ion-nav-bar>
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
