--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,6 @@
 <ion-view view-title="Profile">
+<ion-nav-bar class="bar-dark"> 
+</ion-nav-bar>
   <ion-content> 
     <h1>Profile Overview</h1>
     <div>Open Projects</div>
