--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,18 +1,34 @@
 <ion-view view-title="Search">
+<ion-nav-bar class="bar-dark"> 
+</ion-nav-bar>
   <ion-content id="search">
     <h1>Find Your Contractor</h1>
-      <form>
-        <div><input ng-model='search.jobName' placeholder='Name Your Job'></div>
-        <div><input ng-model='search.jobDescription' placeholder='Describe Your Job'></div>
-        <div><input ng-model='search.date' placeholder="Date"></div>
-        <div><input ng-model='search.address' placeholder="Address"></div>
-        <div><select ng-model='search.jobType'>
-          <option value="plumbing">Plumbing</option>
-          <option value="electrical">Electrical</option>
-          <option value="cleaning">Cleaning</option>
-          <option value="general handyman">General Handyman</option>
-        </select></div>
-        <button ng-click='search(search.jobName, search.jobDescription, search.date, search.address, search.jobType)' type="button">Submit</button>
-      </form>
-  </ion-content>
-</ion-view>
+    <div class="list">
+      <label class="item item-input">
+        <input ng-model='search.jobName' type="text" placeholder="Name Your Job">
+      </label>
+      <label class="item item-input">
+        <input ng-model='search.jobDescription' type="text" placeholder="Describe Your Job">
+      </label>
+      <label class="item item-input">
+        <input ng-model='search.date' type="text" placeholder="Date">
+      </label>
+      <label class="item item-input">
+        <input ng-model='search.address' type="text" placeholder="Address">
+      </label>
+      <label class="item item-input item-select">
+        <div class="input-label">
+        Type of Job
+        </div>
+        <select ng-model='search.jobType'>
+          <option>Plumbing</option>
+          <option selected>Electrical</option>
+          <option>Cleaning</option>
+        </select>
+      </label>
+    </div>
+
+    <button class="button button-block button-energized" ng-click='search(search.jobName, search.jobDescription, search.date, search.address, search.jobType)'>
+      Post
+    </button>
+
