--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,4 +1,6 @@
 <ion-view view-title="Settings">
+<ion-nav-bar class="bar-dark"> 
+</ion-nav-bar>
   <ion-content>
     <h1>Settings</h1>
     <div>
