--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -4,27 +4,33 @@
   <ion-content>
     <h1>Settings</h1>
     <div class="list">
-      Personal Information
+      Personal Information (any entered information will be changed)
       <label class="item item-input">
-        <input type="text" placeholder="First Name">
+        <input ng-model="settings.firstName" type="text" placeholder="First Name">
       </label>
       <label class="item item-input">
-        <input type="text" placeholder="Last Name">
+        <input ng-model="settings.lastName" type="text" placeholder="Last Name">
+      </label>
+      <label class="item item-input">
+        <input ng-model="settings.email" type="text" placeholder="Email">
+      </label>
+      <label class="item item-input">
+        <input ng-model="settings.phone" type="text" placeholder="Phone Number">
+      </label>
+      <label class="item item-input">
+        <input ng-model="settings.address" type="text" placeholder="Street Address">
+      </label>
+      <label class="item item-input">
+        <input ng-model="settings.city" type="text" placeholder="City">
+      </label>
+      <label class="item item-input">
+        <input ng-model="settings.state" type="text" placeholder="State">
+      </label>
+      <label class="item item-input">
+        <input ng-model="settings.zipcode" type="text" placeholder="Zip code">
       </label>
       <button class="button button-block button-energized">
         Save Changes
       </button>
-      Change Password
-      <label class="item item-input">
-        <input type="text" placeholder="Current Password">
-      </label>
-      <label class="item item-input">
-        <input type="text" placeholder="New Password">
-      </label>
-    </div>
-    <button class="button button-block button-energized">
-      Change password
-    </button>
-
   </ion-content>
 </ion-view>
