Changes for recent DB

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,7 +22,7 @@
           Profile
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Search
+          Post Project
         </ion-item>
         <ion-item menu-close href="#/app/settings">
           Settings
